# dex

./: .gitignore  CLAUDE.md  FUTURE.md  LICENSE  MIGRATION_GUIDE.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
dex/: __init__.py  apps.py  exceptions.py  expression.py  introspection.py  manager.py  model.py  model.pyi  prefetch.py  query.py  queryset.py
tests/: apps.py  conftest.py  models.py  settings.py  shared_expressions.py  test_expression.py
